--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "95649e88",
+   "id": "cc4cec7f",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
     "# print(len(census_pd))\n",
     "# census_pd.head()\n",
     "\n",
-    "cleaned_vehicles = census_pd[\"Total Vehicles\"].dropna(how='any')\n",
+    "# cleaned_vehicles = census_pd[\"Total Vehicles\"].dropna(how='any')\n",
     "\n",
     "census_pd[\"Average Vehicles per Household\"] = census_pd[\"Total Vehicles\"] / census_pd[\"Number of Households\"]\n",
     "## need to drop NA rows first\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "770da2a1",
+   "id": "b9e0f667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b319add7",
+   "id": "c70dc3db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1117d7d",
+   "id": "528965e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d393fdd6",
+   "id": "90ddd21a",
    "metadata": {},
    "outputs": [],
    "source": []
