--- a/EV_Disparity_hopeyoungblood/EVDisparity_hopeyoungblood.ipynb
+++ b/EV_Disparity_hopeyoungblood/EVDisparity_hopeyoungblood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "a4cb45dd",
    "metadata": {},
    "outputs": [],
@@ -38,148 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "361cd788",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33120\n"
+     "ename": "KeyError",
+     "evalue": "\"['NAME'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-256448c0b094>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mcensus_pd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Average Commute Time\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcensus_pd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Total Commute Time\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mcensus_pd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Number of Households\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m census_pd = census_pd[[\"NAME\", \"Zipcode\", \"Population\", \"Number of Households\", \n\u001b[0m\u001b[1;32m     29\u001b[0m                        \u001b[0;34m\"Household Income\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Poverty Count\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Poverty Rate\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                        \u001b[0;34m\"Total Commute Time\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Average Commute Time\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3028\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3029\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3030\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3031\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3032\u001b[0m         \u001b[0;31m# take() does not accept boolean indexers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[0;34m(self, key, axis, raise_missing)\u001b[0m\n\u001b[1;32m   1264\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1265\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1266\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_read_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mraise_missing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1267\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1268\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[0;34m(self, key, indexer, axis, raise_missing)\u001b[0m\n\u001b[1;32m   1314\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1315\u001b[0m                 \u001b[0mnot_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1316\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{not_found} not in index\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1317\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1318\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['NAME'] not in index\""
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Zipcode</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Number of Households</th>\n",
-       "      <th>Household Income</th>\n",
-       "      <th>Poverty Count</th>\n",
-       "      <th>Poverty Rate</th>\n",
-       "      <th>Total Commute Time</th>\n",
-       "      <th>Average Commute Time</th>\n",
-       "      <th>Total Vehicles</th>\n",
-       "      <th>Average Vehicles per Household</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00601</td>\n",
-       "      <td>17113.0</td>\n",
-       "      <td>5509.0</td>\n",
-       "      <td>14361.0</td>\n",
-       "      <td>10552.0</td>\n",
-       "      <td>61.660726</td>\n",
-       "      <td>3504.0</td>\n",
-       "      <td>0.636050</td>\n",
-       "      <td>3115.0</td>\n",
-       "      <td>0.565438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00602</td>\n",
-       "      <td>37751.0</td>\n",
-       "      <td>12740.0</td>\n",
-       "      <td>16807.0</td>\n",
-       "      <td>18653.0</td>\n",
-       "      <td>49.410612</td>\n",
-       "      <td>10525.0</td>\n",
-       "      <td>0.826138</td>\n",
-       "      <td>8645.0</td>\n",
-       "      <td>0.678571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00603</td>\n",
-       "      <td>47081.0</td>\n",
-       "      <td>19228.0</td>\n",
-       "      <td>16049.0</td>\n",
-       "      <td>23691.0</td>\n",
-       "      <td>50.319662</td>\n",
-       "      <td>11479.0</td>\n",
-       "      <td>0.596994</td>\n",
-       "      <td>10460.0</td>\n",
-       "      <td>0.543998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00606</td>\n",
-       "      <td>6392.0</td>\n",
-       "      <td>1946.0</td>\n",
-       "      <td>12119.0</td>\n",
-       "      <td>4185.0</td>\n",
-       "      <td>65.472466</td>\n",
-       "      <td>1228.0</td>\n",
-       "      <td>0.631038</td>\n",
-       "      <td>1085.0</td>\n",
-       "      <td>0.557554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00610</td>\n",
-       "      <td>26686.0</td>\n",
-       "      <td>8795.0</td>\n",
-       "      <td>19898.0</td>\n",
-       "      <td>12204.0</td>\n",
-       "      <td>45.731844</td>\n",
-       "      <td>8065.0</td>\n",
-       "      <td>0.916998</td>\n",
-       "      <td>6800.0</td>\n",
-       "      <td>0.773167</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Zipcode  Population  Number of Households  Household Income  Poverty Count  \\\n",
-       "0   00601     17113.0                5509.0           14361.0        10552.0   \n",
-       "1   00602     37751.0               12740.0           16807.0        18653.0   \n",
-       "2   00603     47081.0               19228.0           16049.0        23691.0   \n",
-       "3   00606      6392.0                1946.0           12119.0         4185.0   \n",
-       "4   00610     26686.0                8795.0           19898.0        12204.0   \n",
-       "\n",
-       "   Poverty Rate  Total Commute Time  Average Commute Time  Total Vehicles  \\\n",
-       "0     61.660726              3504.0              0.636050          3115.0   \n",
-       "1     49.410612             10525.0              0.826138          8645.0   \n",
-       "2     50.319662             11479.0              0.596994         10460.0   \n",
-       "3     65.472466              1228.0              0.631038          1085.0   \n",
-       "4     45.731844              8065.0              0.916998          6800.0   \n",
-       "\n",
-       "   Average Vehicles per Household  \n",
-       "0                        0.565438  \n",
-       "1                        0.678571  \n",
-       "2                        0.543998  \n",
-       "3                        0.557554  \n",
-       "4                        0.773167  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -191,7 +68,8 @@
     "census_pd = pd.DataFrame(census_data)\n",
     "\n",
     "# Column Reordering\n",
-    "census_pd = census_pd.rename(columns={\"B01003_001E\": \"Population\",\n",
+    "census_pd = census_pd.rename(columns={\n",
+    "                                      \"B01003_001E\": \"Population\",\n",
     "                                      \"B11001_001E\": \"Number of Households\",\n",
     "                                      \"B19013_001E\": \"Household Income\",\n",
     "#                                       \"B19301_001E\": \"Per Capita Income\",\n",
@@ -209,7 +87,7 @@
     "\n",
     "census_pd[\"Average Commute Time\"] = census_pd[\"Total Commute Time\"] / census_pd[\"Number of Households\"]\n",
     "\n",
-    "census_pd = census_pd[[\"Zipcode\", \"Population\", \"Number of Households\", \n",
+    "census_pd = census_pd[[\"NAME\", \"Zipcode\", \"Population\", \"Number of Households\", \n",
     "                       \"Household Income\", \"Poverty Count\", \"Poverty Rate\", \n",
     "                       \"Total Commute Time\", \"Average Commute Time\",\n",
     "                       \"Total Vehicles\", \"Average Vehicles per Household\"]]\n",
